--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@mui/icons-material": "^5.16.4",
     "@mui/material": "^5.16.4",
     "@mui/material-nextjs": "^5.16.4",
-    "@socket.io/admin-ui": "^0.5.1",
+    "@socket.io/admin-ui": "latest",
     "clsx": "^2.1.1",
     "env-cmd": "^10.1.0",
     "framer-motion": "^11.3.8",
