--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "framer-motion": "^11.3.8",
     "next": "^14.2.5",
     "notistack": "^3.0.1",
+    "poker-utils": "^13.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
