--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,4 +12,5 @@ services:
     environment:
       - PORT=3000
       - NODE_ENV=production
+      - NEXT_PUBLIC_URL=http://localhost:3000
     restart: always
