--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "^14.2.5",
     "notistack": "^3.0.1",
     "poker-utils": "^13.2.3",
+    "pokersolver": "^2.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
