--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.16.4",
     "@mui/material-nextjs": "^5.16.4",
     "@socket.io/admin-ui": "latest",
+    "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
     "env-cmd": "^10.1.0",
     "framer-motion": "^11.3.8",
@@ -36,6 +37,7 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "^20.14.11",
     "@types/react": "^18.3.3",
     "@types/uuid": "^10.0.0",
