--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 NODE_ENV="development"
 
 NEXT_PUBLIC_URL="http://localhost:3001"
+
+# Only needed if you want to start the socket.io admin
+ADMIN_USERNAME="admin"
+ADMIN_PASSWORD="admin"
